# url-to-pdf

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-to-pypi.yml  tests.yml
url_to_book/: __init__.py
url_to_pdf/: cli.py  extractor.py  image_handler.py  pdf_generator.py
