[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "url-to-pdf"
version = "0.1.0"
description = "CLI tool to extract article content from URL and save as PDF"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Developer"}
]
dependencies = [
    "newspaper3k>=0.2.8",
    "fpdf2>=2.7.0",
    "click>=8.0.0",
    "requests>=2.28.0",
    "Pillow>=9.0.0",
    "lxml>=4.9.0",
    "lxml_html_clean>=0.1.0",
]

[project.scripts]
url-to-pdf = "url_to_pdf.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
